syntax = "proto3";

package io.odpf.stencil;

option java_multiple_files = true;
option java_package = "io.odpf.stencil";
option java_outer_classname = "Recursive";


message RecursiveLogMessage {
    string id = 1;
    message RECORD {
        string id = 1;
        RECORD record = 2;
    }
}